<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_description">Movie Description</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="english">english</string>
    <string name="_5_5_stars">5.5 stars</string>
    <string name="api_key">f0f9da663fc666f530266581f6546612</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>