<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="40dp"
        android:shadowRadius=".8"
        style="@style/MaterialAlertDialog.Material3"
        android:background="@drawable/gradient_background">

        <!--<androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />-->

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/movie_image_view"
            style="@style/MaterialAlertDialog.Material3"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toTopOf="@id/movie_name_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_name_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_desc_view"
            app:layout_constraintEnd_toEndOf="@id/movie_image_view"
            app:layout_constraintStart_toStartOf="@id/movie_image_view"
            app:layout_constraintTop_toBottomOf="@id/movie_image_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_desc_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:minLines="2"
            android:paddingHorizontal="20dp"
            android:text="@string/movie_description"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/movie_name_view"
            app:layout_constraintStart_toStartOf="@id/movie_name_view"
            app:layout_constraintTop_toBottomOf="@id/movie_name_view"
            app:layout_constraintBottom_toTopOf="@id/linear_layout"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/movie_desc_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_release_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/_01_01_2024"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_avg_vote_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/_5_5_stars"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_original_lang_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>